# Omni_Localizer

./: .env.example  .gitignore  AGENTS.md  AGENT_USAGE.md  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  OL-改进计划-Frontmatter.md  OL_DD_Vibe_Phase版+语言质量.md  README.md  RELEASE_CHECKLIST.md  opp-improvement-plan.md  opp-oll-api-contract.md  pyproject.toml
.github/workflows/: publish.yml  real-llm-nightly.yml  test.yml
.omo/: boulder.json
.omo/evidence/final-qa/: environment.txt  qa-report.md
.omo/notepads/batch-processing/: learnings.md
.omo/notepads/frontmatter-implementation/: learnings.md
.omo/notepads/phase-0-infrastructure/: learnings.md
.omo/notepads/phase-2-xliff-channel/: learnings.md
.omo/notepads/phase4-cli-e2e-report-pypi/: learnings.md
.omo/notepads/scheduler/: learnings.md
.omo/plans/: batch-processing.md  frontmatter-implementation.md  phase-1-md-channel.md  phase-2-xliff-channel.md  phase-3b-lqa-tm-checkpoint.md
.omo/run-continuation/: ses_1b2087125ffefMYy2FSsOFkVlQ.json
.sisyphus/: boulder.json  test-fix-loop.md
.sisyphus/drafts/: phase-2-xliff-channel.md
.sisyphus/notepads/phase-1-md-channel/: learnings.md
.sisyphus/plans/: logging-system.md  omni-localizer-agent-facing.md  phase-0-infrastructure.md  phase-3a-routing-modelpool-concurrency.md  phase4-cli-e2e-report-pypi.md
config/: book_localization.yaml  default.yaml  slim-test.yaml  test_universal.yaml
docs/: API.md  ARCHITECTURE.md  TROUBLESHOOTING.md  TUTORIAL.md  glossary_format.md  real_llm_runbook.md
final-out/_diagnostics/: M2.7_CALIBRATION_REPORT.json
scripts/: calibrate_m2.7.py
src/: ol_cli.py  ol_mcp_run.py  ol_mcp_wrapper.sh  ol_review_extractor.py
src/.hermes/skills/ol-localizer/: README.md  SKILL.md
src/.opencode/skills/ol-localizer/: SKILL.md
src/cli/: __init__.py  _shared.py  _warning_extractor.py  add_tm_entries.py  batch.py  cache.py  capabilities.py  disambiguate.py  extract_terms.py  frontmatter.py  generate_report.py  inspect_config.py  judge_text.py  load_glossary.py  ping.py  profile_doc.py  search_tm.py  shield_md.py  translate_md.py  translate_xliff.py  translation_status.py  unshield_md.py  verify_terms.py  version.py
src/ol/: __init__.py
src/ol_batch/: __init__.py  config.py  discovery.py  processor.py  progress.py  summary.py
src/ol_buses/: __init__.py  format_guard.py  md_bus.py  md_shield.py  xliff_bus.py  xliff_shield.py
src/ol_checkpoint/: __init__.py  checkpoint.py  exceptions.py
src/ol_cli_pkg_broken/: __init__.py  __main__.py
src/ol_concurrency/: __init__.py  scheduler.py
src/ol_config/: __init__.py  loader.py  schema.py
src/ol_core/: __init__.py  dataclass.py  exceptions.py  interfaces.py
src/ol_logging/: __init__.py  constants.py  context.py  core.py  formatters.py  handlers.py
src/ol_lqa/: __init__.py  calibration.py  comet.py  judge.py  multi_judge.py  qa_rules.py  report.py  scorer.py  stability.py
src/ol_lqa/templates/: report.csv.j2  report.html.j2
src/ol_mcp/: README.md  __init__.py  __main__.py  _errors.py  _tracing_exporter.py  auth.py  batch_translate.py  config.py  disambiguate.py  extract_terms.py  extract_warnings.py  generate_report.py  get_capabilities.py  glossary.py  health.py  inspect_config.py  judge.py  metrics.py  profile_doc.py  rate_limiter.py  security.py  server.py  shield_text.py  status.py  task_tracker.py  tm.py  tm_add.py  tools.py  tracing.py  translate_file.py  translate_md.py  translate_xliff.py  verify_terms.py
src/ol_md/: extractor.py  pipeline.py  shield.py  token_stream.py
src/ol_md/repair/: __init__.py  level1.py  level2.py  level3.py  level4.py
src/ol_pool/: __init__.py  fake.py  router.py
src/ol_post/: __init__.py  punctuation.py
src/ol_restoration/: __init__.py
src/ol_retry/: __init__.py  retry.py
src/ol_routing/: __init__.py  router.py
src/ol_style/: __init__.py  cache.py  doc_profiler.py  schema.py
src/ol_terminology/: __init__.py  disambiguator.py  extractor.py  glossary.py  glossary_class.py  rag_injector.py  schema.py  verifier.py
src/ol_tm/: __init__.py  _py_tmx.py  auto_gen.py  service.py
src/ol_xliff/: __init__.py  parser.py  pipeline.py  polish.py  shield.py
src/ol_xliff/repair/: __init__.py  level1.py  level2.py  level3.py  level4.py
tests/: conftest.py  skill_helpers.py  test_async_translate.py  test_auto_tm.py  test_batch_edge_cases.py  test_batch_processor.py  test_calibration.py  test_check_env_vars.py  test_checkpoint.py  test_checkpoint_resume.py  test_chunk_by_paragraph_concurrency.py  test_chunk_by_paragraph_config.py  test_cli_batch.py  test_cli_fake_llm_warning.py  test_cli_fallback_order.py  test_cli_profile_doc.py  test_cli_smoke.py  test_cli_verify_terms.py  test_concurrent_engine.py  test_config_loader.py  test_disambiguator.py  test_e2e_74_translate_context.py  test_e2e_77_math_shield.py  test_e2e_78_html_shield_unshield.py  test_e2e_83_large_content.py  test_e2e_behavioral.py  test_e2e_md_pipeline.py  test_e2e_pipeline_fixtures.py  test_e2e_real_llm_m27.py  test_e2e_xliff_pipeline.py  test_edge_cases.py  test_evaluation_result.py  test_format_guard.py  test_frontmatter.py  test_glossary.py  test_glossary_cli.py  test_glossary_loader.py  test_hermes_skill.py  test_integration_3a.py  test_integration_3b.py  (+85 more)
tests/fixtures/: glossary.json  glossary_爱上海尔.json  review_sample.md  review_sample.xlf  review_sample.xliff  sample-xliff12.xlf  sample-xliff2.xlf  sample.md  sample.xliff  sample_glossary.json
tests/fixtures/real_llm_corpus/: 01_intro.txt  02_market.txt  03_product.txt  04_team.txt  05_close.txt  06_mini.xlf  reference_outputs.json
tests/real_llm/: conftest.py  cost_estimator.py  test_cost_estimator.py  test_real_llm_e2e.py
