[project]
name = "omni-localizer"
version = "0.4.5"
description = "AI-native localization pipeline with automated quality control"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
authors = [{name = "1StepMore", email = "renanzai@foxmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Localization",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
keywords = ["localization", "translation", "llm", "ai", "markdown", "xliff", "i18n", "internationalization"]

dependencies = [
    "litellm>=1.82.0",
    "translate-toolkit>=3.19.9",
    "markdown-it-py>=3.0.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.0",
    "pytest>=8.0.0",
    "span-aligner>=0.3.2",
    "hypomnema>=0.8",
    "python-json-logger>=2.0.0",
    "pybreaker>=1.0.0",
    "prometheus_client>=0.20.0",
    "openevalkit>=0.1.7",
    "typer>=0.15.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "sacrebleu>=2.0",
    "keybert>=0.9.0",
    "yake>=0.5.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.41.0",
]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pip-audit>=2.8.0",
]

[project.urls]
Homepage = "https://github.com/1StepMore/Omni_Localizer"
Documentation = "https://github.com/1StepMore/Omni_Localizer#readme"
Repository = "https://github.com/1StepMore/Omni_Localizer"
Issues = "https://github.com/1StepMore/Omni_Localizer/issues"

[project.scripts]
ol = "ol_cli:main_entry"
ol-mcp = "ol_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["ol_cli", "ol_review_extractor"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.yaml", "*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "real_llm_required: test requires a real LLM call (OMNI_RUN_REAL_LLM=1)",
    "real_llm_optional: test may use real LLM if available, mocks otherwise",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["D100", "D104", "PLR0913", "TRY003", "E501", "F841", "E712", "F821", "E402"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true